# reddit-notifier

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  skaffold.yaml
.github/workflows/: codeql-analysis.yml
k8s/: cronjob.yaml  kustomization.yaml  serviceaccount.yaml
reddit_notifier/: __main__.py  main.py  settings.py
tests/files/: found_new.json
